update slider timeline bar (fix pause visibility)

--- a/features/slider/molecules/Bar/atoms/TimeLine/timeLine.css
+++ b/features/slider/molecules/Bar/atoms/TimeLine/timeLine.css
@@ -33,7 +33,7 @@
   background-color: rgba(255, 255, 255, .5);
 }
   
-.paused .progressLine {
+.timeLine.paused .progressLine {
   animation-play-state: paused;
 }
 
